isCheckinWindow v1
needs further optimization but works for now.
